feat: change logic app
