# docs/swagger.json
@@ -85,7 +85,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Auth"
+                            "$ref": "#/definitions/domain.SignInInput"
                         }
                     }
                 ],
@@ -237,6 +237,20 @@
                     "type": "string"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.SignInInput": {
+            "type": "object",
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "strategy": {
                     "type": "string"
                 }
             }
